<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTask"
    android:background="@drawable/gradient_animation">


    <Toolbar
        android:id="@+id/add_task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_designe_day"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_edit_24"
                android:layout_marginEnd="5dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit Task"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto" />
            <TextView
                android:id="@+id/task_id_edit_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="__"/>

        </LinearLayout>
    </Toolbar>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/tasks_animation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/add_task_animation"
        app:layout_constraintTop_toBottomOf="@id/add_task_toolbar"
        app:layout_constraintBottom_toTopOf="@id/Vertical_center"/>

    <LinearLayout
        android:id="@+id/Vertical_center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="180dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/add_bootom_draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Vertical_center"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-157dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_usr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/edit_text_bgrd"
            android:hint="@string/title_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp"
            android:paddingStart="13dp"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/title"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/discription_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/discription"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/discription_usr"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/edit_text_bgrd"
            android:gravity="start"
            android:hint="@string/discription_here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/discription_heading"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="80dp" />

        <TextView
            android:id="@+id/Due_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/due_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/discription_usr"
            app:layout_constraintTop_toBottomOf="@id/discription_usr" />

        <LinearLayout
            android:id="@+id/date_picker_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bgrd"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@id/Due_time"
            app:layout_constraintEnd_toEndOf="@id/discription_usr"
            app:layout_constraintStart_toEndOf="@id/Due_time"

            app:layout_constraintTop_toTopOf="@id/Due_time">

            <TextView
                android:id="@+id/set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dd_mm_yyyy"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_picker_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_bgrd"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@id/date_picker_call"
            app:layout_constraintStart_toStartOf="@id/date_picker_call"

            app:layout_constraintTop_toBottomOf="@id/date_picker_call">

            <TextView
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hh_mm"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/date_and_time_btn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/dateandtimeselect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/date_picker_call"
            app:layout_constraintBottom_toBottomOf="@id/time_picker_call"
            app:layout_constraintStart_toEndOf="@id/date_picker_call"
            android:elevation="4dp"/>


        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/priority"
            app:layout_constraintTop_toBottomOf="@id/time_picker_call"
            app:layout_constraintStart_toStartOf="@id/Due_time"
            />


        <com.google.android.material.slider.Slider
            android:id="@+id/priority_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/priority"
            app:trackColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="35dp"
            android:valueFrom="0"
            app:labelBehavior="gone"
            android:valueTo="2"
            android:contentDescription="@string/slider_desc"
            android:stepSize="1"/>

        <TextView
            android:id="@+id/priority_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/priority_slider"
            app:layout_constraintEnd_toEndOf="@id/priority_slider"
            app:layout_constraintStart_toStartOf="@id/priority_slider"
            android:text="@string/low"
            android:visibility="visible"
            />


        <LinearLayout
            android:id="@+id/Edit_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toStartOf="@id/Delete_task_btn"

            android:background="@drawable/btn_dsgn"
            android:paddingVertical="6dp"
            android:paddingHorizontal="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:elevation="4dp"
            android:layout_marginBottom="15dp">

            <ImageView
                android:id="@+id/_Add_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit_24" />
            <TextView
                android:id="@+id/add__src"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/nunito"
                android:textColor="@color/white"
                android:text="Edit"
                android:textSize="22dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Delete_task_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/delete_btn_dsgn"
            android:elevation="4dp"
            android:gravity="center"

            app:layout_constraintBottom_toBottomOf="@id/Edit_task_btn"

            android:orientation="horizontal"
            android:paddingHorizontal="15dp"
            android:paddingVertical="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Edit_task_btn"
            app:layout_constraintTop_toTopOf="@id/Edit_task_btn">

            <ImageView
                android:id="@+id/Add_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_delete_24" />

            <TextView
                android:id="@+id/add_src"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="Delete"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>